try to deploy with mysql

--- a/pom.xml
+++ b/pom.xml
@@ -81,10 +81,11 @@
         </dependency>
 
         <dependency>
-            <groupId>org.postgresql</groupId>
-            <artifactId>postgresql</artifactId>
-            <version>42.7.1</version>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.33</version> <!-- Use the appropriate version -->
         </dependency>
+
     </dependencies>
 
     <build>
