--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.devtools.restart.enabled=false
+spring.devtools.restart.enabled=true
 telegram.help.bot.username = ${BOT_NAME}
 telegram.help.bot.token = ${TOKEN}
 telegram.help.bot.tokenpay = ${TOKEN_PAY}
