--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 #spring.devtools.restart.enabled=false
 #telegram.help.bot.username=${BOT_NAME}
-telegram.help.bot.token=${TOKEN}
+telegram.help.bot.token=5814824968:AAFyrp8yFJ_rgSy81vQoXy-objGqjSAThtc
 telegram.help.bot.tokenpay=${TOKEN_PAY}
 //telegram.help.bot.webHookPath=${WEBHOOK}
 
