--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,34 +4,34 @@ telegram.help.bot.token=${TOKEN}
 telegram.help.bot.tokenpay=${TOKEN_PAY}
 //telegram.help.bot.webHookPath=${WEBHOOK}
 
-##db related settings
-#spring.jpa.hibernate.ddl-auto=update
-#spring.datasource.url=${DB_URL}
-#spring.datasource.username=${DB_USERNAME}
-#spring.datasource.password=${DB_PASSWORD}
-#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-#spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
-#spring.jpa.show-sql=true
-#spring.datasource.hikari.maximum-pool-size=2
-##spring.jpa.properties.hibernate.format_sql=true
+#db related settings
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.show-sql=true
+spring.datasource.hikari.maximum-pool-size=2
+#spring.jpa.properties.hibernate.format_sql=true
 
 
-#
+
 #spring.devtools.restart.enabled=false
 #telegram.help.bot.username = ${BOT_NAME}
 #telegram.help.bot.token=5814824968:AAFY63tm-dQ_sIU-vqa8VW3QJ3t5O5-sAxQ
 #telegram.help.bot.tokenpay=${TOKEN_PAY}
 #telegram.help.bot.webHookPath=${WEBHOOK}
 
-#db related settings
-spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/StudentPortal
-spring.datasource.username=root
-spring.datasource.password=89d866178530384810L
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
-spring.jpa.show-sql=true
-spring.datasource.hikari.maximum-pool-size = 2
-#spring.jpa.properties.hibernate.format_sql=true
+##db related settings
+#spring.jpa.hibernate.ddl-auto=update
+#spring.datasource.url=jdbc:mysql://localhost:3306/StudentPortal
+#spring.datasource.username=root
+#spring.datasource.password=89d866178530384810L
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+#spring.jpa.show-sql=true
+#spring.datasource.hikari.maximum-pool-size = 2
+##spring.jpa.properties.hibernate.format_sql=true
 
 
