--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 #spring.devtools.restart.enabled=false
-#telegram.help.bot.username=${BOT_NAME}
+
+
+telegram.help.bot.username=${BOT_NAME}
 telegram.help.bot.token=${TOKEN}
 telegram.help.bot.tokenpay=${TOKEN_PAY}
 //telegram.help.bot.webHookPath=${WEBHOOK}
