--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,7 +26,7 @@ spring.datasource.hikari.maximum-pool-size=2
 #telegram.help.bot.tokenpay=${TOKEN_PAY}
 #telegram.help.bot.webHookPath=${WEBHOOK}
 
-##db related settings
+#db related settings
 #spring.jpa.hibernate.ddl-auto=update
 #spring.datasource.url=jdbc:mysql://localhost:3306/StudentPortal
 #spring.datasource.username=root
