--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,9 @@
 
 telegram.help.bot.username=${BOT_NAME}
 telegram.help.bot.token=${TOKEN}
-telegram.help.bot.tokenpay=${TOKEN_PAY}
+telegram.help.bot.tokenpay=${SECRET_TOKEN_PAY}
+telegram.help.bot.secrettokenpay=${TOKEN_PAY}
+
 //telegram.help.bot.webHookPath=${WEBHOOK}
 
 #db related settings
