--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,21 +3,21 @@
 
 telegram.help.bot.username=${BOT_NAME}
 telegram.help.bot.token=${TOKEN}
-telegram.help.bot.tokenpay=${SECRET_TOKEN_PAY}
-telegram.help.bot.secrettokenpay=${TOKEN_PAY}
+telegram.help.bot.tokenpay=${TOKEN_PAY}
+telegram.help.bot.secrettokenpay=${SECRET_TOKEN_PAY}
 
 //telegram.help.bot.webHookPath=${WEBHOOK}
 
-#db related settings
-spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=${DB_URL}
-spring.datasource.username=${DB_USERNAME}
-spring.datasource.password=${DB_PASSWORD}
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
-spring.jpa.show-sql=true
-spring.datasource.hikari.maximum-pool-size=2
-#spring.jpa.properties.hibernate.format_sql=true
+##db related settings
+#spring.jpa.hibernate.ddl-auto=update
+#spring.datasource.url=${DB_URL}
+#spring.datasource.username=${DB_USERNAME}
+#spring.datasource.password=${DB_PASSWORD}
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+#spring.jpa.show-sql=true
+#spring.datasource.hikari.maximum-pool-size=2
+##spring.jpa.properties.hibernate.format_sql=true
 
 
 
@@ -28,14 +28,14 @@ spring.datasource.hikari.maximum-pool-size=2
 #telegram.help.bot.webHookPath=${WEBHOOK}
 
 #db related settings
-#spring.jpa.hibernate.ddl-auto=update
-#spring.datasource.url=jdbc:mysql://localhost:3306/StudentPortal
-#spring.datasource.username=root
-#spring.datasource.password=89d866178530384810L
-#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-#spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
-#spring.jpa.show-sql=true
-#spring.datasource.hikari.maximum-pool-size = 2
-##spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://localhost:3306/StudentPortal
+spring.datasource.username=root
+spring.datasource.password=89d866178530384810L
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.show-sql=true
+spring.datasource.hikari.maximum-pool-size = 2
+#spring.jpa.properties.hibernate.format_sql=true
 
 
