--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -36,6 +36,6 @@ spring.datasource.hikari.maximum-pool-size=2
 #spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 #spring.jpa.show-sql=true
 #spring.datasource.hikari.maximum-pool-size = 2
-##spring.jpa.properties.hibernate.format_sql=true
+#spring.jpa.properties.hibernate.format_sql=true
 #
 #
